# jcdri

./: .drone.yml  CMakeLists.txt  README.md
includes/: bluetooth_hid.h  event_loop.h  ipc_source.h  joycon.h  logger.h  rumble.h  source.h  udev.h  utils.h
includes/devices/: common_dev.h  dual_dev.h  dual_keyboard.h  keyboard_dual.h  mouse_dev.h  single_dev.h
rules.d/: 99-switch.rules
src/: CMakeLists.txt  cli.cpp  evdev_wrapper.c  event_loop.cpp  ipc_source.cpp  ir_queue.c  joycon.c  joycon.cpp  joycon.h  main.c  main.cpp  rumble.c  rumble.cpp  rumble.h  test.cpp  udev.cpp  utils.c  utils.cpp
src/devices/: common_dev.c  common_dev.cpp  common_dev.h  dual_dev.c  dual_dev.cpp  dual_dev.h  dual_keyboard.cpp  jc_device.cpp  mouse_dev.cpp  single_dev.c  single_dev.cpp  single_dev.h
